@@ -176,6 +176,9 @@ Trunk (unreleased changes)
 
     AVRO-264. Rework Python RPC.  (Jeff Hammerbacher via cutting)
 
+    AVRO-75. Clarify that missing values with no default values cause
+    errors, and fix Java implementation.  (cutting)
+
   OPTIMIZATIONS
 
     AVRO-172. More efficient schema processing (massie)
